<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="button">Button</string>
    <string name="how_to_play">How To Play?</string>
    <string name="disks_in_consecutive_ways_either">disks in consecutive ways either</string>
    <string name="grab_the_most_of_the">Grab The Most of the</string>
    <string name="win_it">WIN IT!!</string>
    <string name="the_one_to_do_so_scores_a_point">The One to Do so,Scores a point</string>
    <string name="points_and_you">points and you.....!!</string>
    <string name="diagonally_horizontally_or_vertically">diagonally,horizontally or vertically.</string>
    <string name="todo">TODO</string>
    <string name="you_have_to_match_your_colored">You have to Match your colored</string>
    <string name="red_color_is_for_player_2_y">Red Color is for Player 2(Y)</string>
    <string name="yellow_color_is_for_player_1_x">Yellow Color is for Player 1(X)</string>
    <string name="first_player_x_and_second_player_o">First Player:X and Second Player:O</string>
    <string name="the_game_is_for_two_players">The Game is for Two Players</string>
    <string name="new_game">NEW GAME</string>
    <string name="player_1">Player 1</string>
    <string name="code1">CODE</string>
    <string name="freaks">FREAKS</string>
    <string name="developers">Developers</string>
    <string name="back">Back</string>
    <string name="code">CODE</string>
    <string name="player_2">Player 2</string>
    <string name="_0">0</string>
    <string name="redraw">REDRAW</string>
</resources>
