<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game"
    tools:context=".Game">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="373dp"
        android:layout_height="373dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1" />


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1" />


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1" />


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            android:onClick="Tapped"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2" />


    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player_1"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player_2"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="55dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="redraw"
            android:text="@string/redraw"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_launcher_background"
            android:onClick="NewGame"
            android:text="@string/new_game"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@android:drawable/ic_menu_set_as"
        android:onClick="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>